WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222956
[GPU Process] MSE videos are unable to AirPlay
https://bugs.webkit.org/show_bug.cgi?id=222956
Summary
[GPU Process] MSE videos are unable to AirPlay
Eric Carlson
Reported
2021-03-08 18:15:09 PST
MSE videos are unable to AirPlay
Attachments
Patch
(3.59 KB, patch)
2021-03-08 18:23 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Update ChangeLog
(4.87 KB, patch)
2021-03-09 11:21 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.46 KB, patch)
2021-03-09 13:37 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-03-08 18:15:36 PST
rdar://72798835
Eric Carlson
Comment 2
2021-03-08 18:23:35 PST
Created
attachment 422650
[details]
Patch
Eric Carlson
Comment 3
2021-03-09 11:21:04 PST
Created
attachment 422734
[details]
Update ChangeLog
Eric Carlson
Comment 4
2021-03-09 13:37:23 PST
Created
attachment 422754
[details]
Patch for landing
EWS
Comment 5
2021-03-09 14:17:32 PST
Committed
r274175
: <
https://commits.webkit.org/r274175
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422754
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug